# DataHunter

./: .gitignore  Dockerfile  HEROKU_DEPLOYMENT.md  LOCAL_DEPLOYMENT.md  MIGRATION_SUMMARY.md  Procfile  README.md  README_PASSWORD_MANAGEMENT.md  README_USER_LIMIT.md  build_css.sh  cleanup_old_apps.py  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  temp.py
.cursor/: rules.md
DataHunter/: asgi.py  celery.py  serializers.py  settings.py  urls.py  wsgi.py
RAGPilot/: asgi.py  celery.py  settings.py  urls.py
celery_app/crawlers/: gov_datas.py  symptoms.py
celery_app/datasets/: symptoms.json
celery_app/extractors/: extract_pdf.py
celery_app/extrators/: extract_pdf.py
celery_app/tasks/: conversations.py  extractors.py
conversations/: admin.py  models.py  urls.py  views.py
conversations/migrations/: 0001_initial.py  0002_alter_message_options_alter_session_options.py  0003_message_is_deleted.py  (+3 more)
crawlers/: admin.py  urls.py
db_init/: init-db.sh
gov_datas/: apps.py  models.py  tools.py  urls.py  utils.py  views.py
home/: admin.py  agents.py  consumers.py  documents.py  forms.py  mixins.py  models.py  routing.py  urls.py  views.py
profiles/: adapters.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
sources/: admin.py  models.py  tools.py  urls.py  views.py
symptoms/: models.py  serializers.py  tests.py  tools.py  urls.py  utils.py  views.py
templates/: _terms_modal.html  base.html  chat_widget.html  gov_datas.html  home.html  login.html  profile.html  symptoms.html
utils/: file_to_df.py  mongodb.py  nl_to_sql.py  question_suggestions.py  search.py  str_date.py
websites/: admin.py  models.py  urls.py  views.py
(+66 files in other folders)
